Fix for tagline on home page not rendering correctly on smaller screens

--- a/assets/sass/cds/_base.scss
+++ b/assets/sass/cds/_base.scss
@@ -114,7 +114,6 @@ h1, .h1 {
         font-weight: 100;
         font-family: "HKGrotesk", sans-serif;
         border-bottom: none;
-        margin-top: 2rem;
         color: $white;
         font-size   : 3rem;
     	line-height : 1.2em;
