--- a/assets/sass/cds/_layout.scss
+++ b/assets/sass/cds/_layout.scss
@@ -161,7 +161,6 @@
 .page-banner--tag-line {
   position    : absolute;
   text-align  : center;
-  top         : 20%;
   width       : 100%;
 
   @include tablet {
